[metadata]
name = morecvutils
version = 0.9.2
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = Computer Vision utilities, OpenCV plot helpers for Optical Flow and Blob Analysis, AVI codec helpers
url = https://github.com/scivision/morecvutils
keywords =
  computer vision
  opencv
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: : Visualization
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  imageio

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn

[options.entry_points]
console_scripts =
