[metadata]
name = morecvutils
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = Computer Vision utilities, OpenCV plot helpers for Optical Flow and Blob Analysis, AVI codec helpers
url = https://github.com/scivision/morecvutils
keywords =
  computer vision
  opencv
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Visualization
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  numpy
  imageio

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
opencv =
  opencv-python

[options.entry_points]
console_scripts =
